--- a/workshop2025/index.html
+++ b/workshop2025/index.html
@@ -344,15 +344,15 @@ td:nth-child(3) {
   <table>
     <tr style="color: #f7f7f7"><th colspan="2">afternoon</th><th colspan="1"><i>theme: software</i></th></tr>
     <tr><th style="border-bottom: 1px solid #ccc;">Time</th><th style="border-bottom: 1px solid #ccc;">Speaker</th><th style="border-bottom: 1px solid #ccc;">Title</th></tr>
-    <tr><td>01:30 PM – 01:40 PM</td><td colspan="2" style="text-align:center;"><b><i>opening remarks</i></b></td></tr>
-    <tr><td>01:40 PM – 02:00 PM</td><td>Anton Hampe (Yale)</td><td><i></i></td></tr>
-    <tr><td>02:00 PM – 02:20 PM</td><td>Matthew Hayden (Stony Brook)</td><td></td></tr>
+    <tr><td>02:00 PM – 02:10 PM</td><td colspan="2" style="text-align:center;"><b><i>opening remarks</i></b></td></tr>
+    <tr><td>02:10 PM – 02:20 PM</td><td>Anton Hampe (Yale)</td><td><i>Characteristic Samples of ISL Functions</i></td></tr>
+    <tr><td>02:30 PM – 02:50 PM</td><td>Matthew Hayden (Stony Brook)</td><td><i></i>Algebraic Classification of Reduplicative Processes</i></td></tr>
     <tr style="border-bottom: 1px solid #ccc;"><td>02:20 PM – 02:30 PM</td><td colspan="2" style="text-align:center;"><b><i>break</i></b></td></tr>
-    <tr><td>02:30 PM – 03:15 PM</td><td>Neha Jeyaram & Manish Kandepalli (Rutgers)</td><td><i></i></td></tr>
-    <tr><td>03:15 PM – 04:00 PM</td><td>Jacob Rowen (Stony Brook)</td><td><i></i></td></tr>
+    <tr><td>02:50 PM – 03:45 PM</td><td>Neha Jeyaram & Manish Kandepalli (Rutgers)</td><td><i></i></td></tr>
+    <tr><td>03:45 PM – 04:30 PM</td><td>Jacob Rowen (Stony Brook)</td><td><i>Model Theoretic Structures and Transductions Software for Phonology</i></td></tr>
     <tr style="border-bottom: 1px solid #ccc;"><td>04:00 PM – 04:15 PM</td><td colspan="2" style="text-align:center;"><b><i>break</i></b></td></tr>
-    <tr><td>04:15 PM – 05:15 PM</td><td>Jeff Heinz (Stony Brook)</td><td><i></i></td></tr>
-    <tr style="border-bottom: 1px solid #ccc;"><td>05:15 PM</td><td colspan="2" style="text-align:center;"><b><i>dinner</i></b></td></tr>
+    <tr><td>04:45 PM – 05:45 PM</td><td>Jeff Heinz (Stony Brook)</td><td><i>Discussion: How to Evaluate Systems that Learn Morpho-Phonological Grammars</i></td></tr>
+    <tr style="border-bottom: 1px solid #ccc;"><td>05:45 PM</td><td colspan="2" style="text-align:center;"><b><i>dinner</i></b></td></tr>
   </table>
 </div>
 
@@ -361,27 +361,27 @@ td:nth-child(3) {
   <table>
     <tr style="color: #f7f7f7"><th colspan="2">morning</th><th colspan="1"><i>theme: linguistic analyses</i></th></tr>
     <tr><th style="border-bottom: 1px solid #ccc;">Time</th><th style="border-bottom: 1px solid #ccc;">Speaker</th><th style="border-bottom: 1px solid #ccc;">Title</th></tr>
-    <tr><td>09:00 AM – 09:20 AM</td><td>Elizabeth Garza (Stony Brook)</td><td></td></tr>
-    <tr><td>09:20 AM – 09:40 AM</td><td>Olanrewaju Samuel (Stony Brook)</td><td><i></i></td></tr>
+    <tr><td>09:00 AM – 09:20 AM</td><td>Maria Elizabeth Garza (Stony Brook)</td><td><i>Long Distance Metathesis in Spanish as Tier ISL (Tier Definite)</i></td></tr>
+    <tr><td>09:20 AM – 09:40 AM</td><td>Olanrewaju Samuel (Stony Brook)</td><td><i>Nasal and Tongue Root interaction in Yagba</i></td></tr>
     <tr style="border-bottom: 1px solid #ccc;"><td>09:40 AM – 09:50 AM</td><td colspan="2" style="text-align:center;"><b><i>break</i></b></td></tr>
-    <tr><td>09:50 AM – 10:10 AM</td><td>Geonhee Lee (Stony Brook)</td><td><i></i></td></tr>
-    <tr><td>10:10 AM – 10:30 AM</td><td>Mikhael Hayes (Illinois)</td><td><i></i></td></tr>
+    <tr><td>09:50 AM – 10:10 AM</td><td>Geonhee Lee (Stony Brook)</td><td><i>Logical Analysis of Nanti Stress Patterns</i></td></tr>
+    <tr><td>10:10 AM – 10:30 AM</td><td>Mikhael Hayes (Illinois)</td><td><i>Computed Rhyme</i></td></tr>
     <tr style="border-bottom: 1px solid #ccc;"><td>10:30 AM – 10:40 AM</td><td colspan="2" style="text-align:center;"><b><i>break</i></b></td></tr>
-    <tr><td>10:40 AM – 11:00 AM</td><td>Hyunjung Joo (Rutgers)</td><td><i></i></td></tr>
-    <tr><td>11:00 AM – 11:20 AM</td><td>Abed Qaddoumi (Stony Brook)</td><td><i></i></td></tr>
+    <tr><td>10:40 AM – 11:00 AM</td><td>Hyunjung Joo (Rutgers)</td><td><i>Connecting Discrete and Continuous Representation of Intonation</i></td></tr>
+    <tr><td>11:00 AM – 11:20 AM</td><td>Abed Qaddoumi (Stony Brook)</td><td><i>Learning Arabic Stress with BUFIA</i></td></tr>
     <tr><td>11:20 AM – 01:15 PM</td><td colspan="2" style="text-align:center;"><b><i>lunch</i></b></td></tr>
     <tr style="color: #f7f7f7"><th colspan="2">afternoon</th><th colspan="1"><i>theme: learning algorithms</i></th></tr>
     <tr><th style="border-bottom: 1px solid #ccc;">Time</th><th style="border-bottom: 1px solid #ccc;">Speaker</th><th style="border-bottom: 1px solid #ccc;">Title</th></tr>
     <tr><td>01:15 PM – 01:45 PM</td><td>Magdalena Markowska (Stony Brook)</td><td><i></i></td></tr>
-    <tr><td>01:45 PM – 02:15 PM</td><td>Han Li (Stony Brook)</td><td><i></i></td></tr>
+    <tr><td>01:45 PM – 02:15 PM</td><td>Han Li (Stony Brook)</td><td><i>Comparing Representations for Tonotactic Learning</i></td></tr>
     <tr style="border-bottom: 1px solid #ccc;"><td>02:15 PM – 02:30 PM</td><td colspan="2" style="text-align:center;"><b><i>break</i></b></td></tr>
     <tr><td>02:30 PM – 03:00 PM</td><td>Chenli Wang (Rutgers)</td><td><i></i></td></tr>
-    <tr><td>03:00 PM – 03:30 PM</td><td>Ben Evans (Stony Brook)</td><td><i></i></td></tr>
+    <tr><td>03:00 PM – 03:30 PM</td><td>Benjamin Evans (Stony Brook)</td><td><i>Learning the Decomposition of Homomorphisms and Simplex Functio</i></td></tr>
     <tr style="border-bottom: 1px solid #ccc;"><td>03:30 PM – 03:45 PM</td><td colspan="2" style="text-align:center;"><b><i>break</i></b></td></tr>
-    <tr><td>03:45 PM – 04:15 PM</td><td>Daniar (NYU)</td><td><i></i></td></tr>
+    <tr><td>03:45 PM – 04:15 PM</td><td>Daniar Kasenov (NYU)</td><td><i>SI2DLA and Logical Phonology</i></td></tr>
     <tr><td>04:15 PM – 04:45 PM</td><td>Sarah Payne (Stony Brook)</td><td></td></tr>
     <tr style="border-bottom: 1px solid #ccc;"><td>04:45 PM – 05:00 PM</td><td colspan="2" style="text-align:center;"><b><i>break</i></b></td></tr>
-    <tr><td>05:00 PM – 06:00 PM</td><td>Kyle Gorman (CUNY)</td><td><i></i></td></tr>
+    <tr><td>05:00 PM – 06:00 PM</td><td>Kyle Gorman (CUNY)</td><td><i>Abstractness and What it Gets You</i></td></tr>
     <tr style="border-bottom: 1px solid #ccc;"><td>06:30 PM</td><td colspan="2" style="text-align:center;"><b><i>dinner</i></b></td></tr>
   </table>
 </div>
@@ -392,9 +392,9 @@ td:nth-child(3) {
     <tr style="color: #f7f7f7"><th colspan="2">morning</th><th colspan="1"><i>theme: syntax/semantics</i></th></tr>
     <tr><th style="border-bottom: 1px solid #ccc;">Time</th><th style="border-bottom: 1px solid #ccc;">Speaker</th><th style="border-bottom: 1px solid #ccc;">Title</th></tr>
     <tr><td>09:15 AM – 09:45 AM</td><td>Paul Petroski (Rutgers)</td><td><i></i></td></tr>
-    <tr><td>09:45 AM – 10:15 AM</td><td>M Love (Stony Brook)</td><td><i></i></td></tr>
+    <tr><td>09:45 AM – 10:15 AM</td><td>M Love (Stony Brook)</td><td><i>Subregular Constraints on Semantic Rules and Objects</i></td></tr>
     <tr style="border-bottom: 1px solid #ccc;"><td>10:15 AM – 10:30 AM</td><td colspan="2" style="text-align:center;"><b><i>break</i></b></td></tr>
-    <tr><td>10:30 AM – 11:00 AM</td><td>Logan Swanson (Stony Brook)</td><td><i></i></td></tr>
+    <tr><td>10:30 AM – 11:00 AM</td><td>Logan Swanson (Stony Brook)</td><td><i>Syntactic Learning over Tree Tiers</i></td></tr>
     <tr><td>11:00 AM – 11:30 AM</td><td>Vincent Czarnecki (Rutgers)</td><td><i></i></td></tr>
     <tr style="border-bottom: 1px solid #ccc;"><td>11:30 AM – 11:45 AM</td><td colspan="2" style="text-align:center;"><b><i>closing remarks</i></b></td></tr>
   </table>
