Add title for Magdalena Markowska's session

--- a/workshop2025/index.html
+++ b/workshop2025/index.html
@@ -389,7 +389,7 @@ td:nth-child(3) {
     <tr><td>11:20 AM – 01:15 PM</td><td colspan="2" style="text-align:center;"><b><i>lunch</i></b></td></tr>
     <tr style="color: #f7f7f7"><th colspan="2">afternoon</th><th colspan="1"><i>theme: learning algorithms</i></th></tr>
     <tr><th style="border-bottom: 1px solid #ccc;">Time</th><th style="border-bottom: 1px solid #ccc;">Speaker</th><th style="border-bottom: 1px solid #ccc;">Title</th></tr>
-    <tr><td>01:15 PM – 01:45 PM</td><td>Magdalena Markowska (Stony Brook)</td><td><i></i></td></tr>
+    <tr><td>01:15 PM – 01:45 PM</td><td>Magdalena Markowska (Stony Brook)</td><td><i>Efficient learning of phonological generalizations with String Equation Adaptive Learner</i> (🦭)</td></tr>
     <tr><td>01:45 PM – 02:15 PM</td><td>Han Li (Stony Brook)</td><td><i>Comparing Representations for Tonotactic Learning</i></td></tr>
     <tr style="border-bottom: 1px solid #ccc;"><td>02:15 PM – 02:30 PM</td><td colspan="2" style="text-align:center;"><b><i>break</i></b></td></tr>
     <tr><td>02:30 PM – 03:00 PM</td><td>Chenli Wang (Rutgers)</td><td><i>Learning Interacting Simplex ISL<sub>2</sub></i></td></tr>
