Add title to Paul Petroski's session

--- a/workshop2025/index.html
+++ b/workshop2025/index.html
@@ -408,7 +408,7 @@ td:nth-child(3) {
   <table>
     <tr style="color: #f7f7f7"><th colspan="2">morning</th><th colspan="1"><i>theme: syntax/semantics</i></th></tr>
     <tr><th style="border-bottom: 1px solid #ccc;">Time</th><th style="border-bottom: 1px solid #ccc;">Speaker</th><th style="border-bottom: 1px solid #ccc;">Title</th></tr>
-    <tr><td>09:15 AM – 09:45 AM</td><td>Paul Petroski (Rutgers)</td><td><i></i></td></tr>
+    <tr><td>09:15 AM – 09:45 AM</td><td>Paul Petroski (Rutgers)</td><td><i>SMPL Interfaces?</i></td></tr>
     <tr><td>09:45 AM – 10:15 AM</td><td>M Love (Stony Brook)</td><td><i>Subregular Constraints on Semantic Rules and Objects</i></td></tr>
     <tr style="border-bottom: 1px solid #ccc;"><td>10:15 AM – 10:30 AM</td><td colspan="2" style="text-align:center;"><b><i>break</i></b></td></tr>
     <tr><td>10:30 AM – 11:00 AM</td><td>Logan Swanson (Stony Brook)</td><td><i>Syntactic Learning over Tree Tiers</i></td></tr>
