--- a/workshop2025/index.html
+++ b/workshop2025/index.html
@@ -365,7 +365,7 @@ td:nth-child(3) {
     <tr><td>02:10 PM – 02:20 PM</td><td>Anton Hampe (Yale)</td><td><i>Characteristic Samples of ISL Functions</i></td></tr>
     <tr><td>02:30 PM – 02:50 PM</td><td>Matthew Hayden (Stony Brook)</td><td><i></i>Algebraic Classification of Reduplicative Processes</i></td></tr>
     <tr style="border-bottom: 1px solid #ccc;"><td>02:20 PM – 02:30 PM</td><td colspan="2" style="text-align:center;"><b><i>break</i></b></td></tr>
-    <tr><td>02:50 PM – 03:45 PM</td><td>Neha Jeyaram & Manish Kandepalli (Rutgers)</td><td><i></i></td></tr>
+    <tr><td>02:50 PM – 03:45 PM</td><td>Neha Jeyaram & Manish Kandepalli (Rutgers)</td><td><i>Implementation of Underlying Representation Learning</i></td></tr>
     <tr><td>03:45 PM – 04:30 PM</td><td>Jacob Rowen (Stony Brook)</td><td><i>Model Theoretic Structures and Transductions Software for Phonology</i></td></tr>
     <tr style="border-bottom: 1px solid #ccc;"><td>04:00 PM – 04:15 PM</td><td colspan="2" style="text-align:center;"><b><i>break</i></b></td></tr>
     <tr><td>04:45 PM – 05:45 PM</td><td>Jeff Heinz (Stony Brook)</td><td><i>Discussion: How to Evaluate Systems that Learn Morpho-Phonological Grammars</i></td></tr>
@@ -396,7 +396,7 @@ td:nth-child(3) {
     <tr><td>03:00 PM – 03:30 PM</td><td>Benjamin Evans (Stony Brook)</td><td><i>Learning the Decomposition of Homomorphisms and Simplex Functio</i></td></tr>
     <tr style="border-bottom: 1px solid #ccc;"><td>03:30 PM – 03:45 PM</td><td colspan="2" style="text-align:center;"><b><i>break</i></b></td></tr>
     <tr><td>03:45 PM – 04:15 PM</td><td>Daniar Kasenov (NYU)</td><td><i>SI2DLA and Logical Phonology</i></td></tr>
-    <tr><td>04:15 PM – 04:45 PM</td><td>Sarah Payne (Stony Brook)</td><td></td></tr>
+    <tr><td>04:15 PM – 04:45 PM</td><td>Sarah Payne (Stony Brook)</td><td><i></i></td></tr>
     <tr style="border-bottom: 1px solid #ccc;"><td>04:45 PM – 05:00 PM</td><td colspan="2" style="text-align:center;"><b><i>break</i></b></td></tr>
     <tr><td>05:00 PM – 06:00 PM</td><td>Kyle Gorman (CUNY)</td><td><i>Abstractness and What it Gets You</i></td></tr>
     <tr style="border-bottom: 1px solid #ccc;"><td>06:30 PM</td><td colspan="2" style="text-align:center;"><b><i>dinner</i></b></td></tr>
@@ -412,7 +412,7 @@ td:nth-child(3) {
     <tr><td>09:45 AM – 10:15 AM</td><td>M Love (Stony Brook)</td><td><i>Subregular Constraints on Semantic Rules and Objects</i></td></tr>
     <tr style="border-bottom: 1px solid #ccc;"><td>10:15 AM – 10:30 AM</td><td colspan="2" style="text-align:center;"><b><i>break</i></b></td></tr>
     <tr><td>10:30 AM – 11:00 AM</td><td>Logan Swanson (Stony Brook)</td><td><i>Syntactic Learning over Tree Tiers</i></td></tr>
-    <tr><td>11:00 AM – 11:30 AM</td><td>Vincent Czarnecki (Rutgers)</td><td><i></i></td></tr>
+    <tr><td>11:00 AM – 11:30 AM</td><td>Vincent Czarnecki (Rutgers)</td><td><i>Unifying PF Operations via Strict and Relativized Locality: Head Movement, Lowering, and Local Dislocation</i></td></tr>
     <tr style="border-bottom: 1px solid #ccc;"><td>11:30 AM – 11:45 AM</td><td colspan="2" style="text-align:center;"><b><i>closing remarks</i></b></td></tr>
   </table>
 </div>
