Fix typos in presentation titles

--- a/workshop2025/index.html
+++ b/workshop2025/index.html
@@ -393,9 +393,9 @@ td:nth-child(3) {
     <tr><td>01:45 PM – 02:15 PM</td><td>Han Li (Stony Brook)</td><td><i>Comparing Representations for Tonotactic Learning</i></td></tr>
     <tr style="border-bottom: 1px solid #ccc;"><td>02:15 PM – 02:30 PM</td><td colspan="2" style="text-align:center;"><b><i>break</i></b></td></tr>
     <tr><td>02:30 PM – 03:00 PM</td><td>Chenli Wang (Rutgers)</td><td><i>Learning Interacting Simplex ISL<sub>2</sub></i></td></tr>
-    <tr><td>03:00 PM – 03:30 PM</td><td>Benjamin Evans (Stony Brook)</td><td><i>Learning the Decomposition of Homomorphisms and Simplex Functio</i></td></tr>
+    <tr><td>03:00 PM – 03:30 PM</td><td>Benjamin Evans (Stony Brook)</td><td><i>Learning the Decomposition of Homomorphisms and Simplex Function</i></td></tr>
     <tr style="border-bottom: 1px solid #ccc;"><td>03:30 PM – 03:45 PM</td><td colspan="2" style="text-align:center;"><b><i>break</i></b></td></tr>
-    <tr><td>03:45 PM – 04:15 PM</td><td>Daniar Kasenov (NYU)</td><td><i>SI2DLA and Logical Phonology</i></td></tr>
+    <tr><td>03:45 PM – 04:15 PM</td><td>Daniar Kasenov (NYU)</td><td><i>SI<sub>2</sub>DLA and Logical Phonology</i></td></tr>
     <tr><td>04:15 PM – 04:45 PM</td><td>Sarah Payne (Stony Brook)</td><td><i></i></td></tr>
     <tr style="border-bottom: 1px solid #ccc;"><td>04:45 PM – 05:00 PM</td><td colspan="2" style="text-align:center;"><b><i>break</i></b></td></tr>
     <tr><td>05:00 PM – 06:00 PM</td><td>Kyle Gorman (CUNY)</td><td><i>Abstractness and What it Gets You</i></td></tr>
