--- a/workshop2025/index.html
+++ b/workshop2025/index.html
@@ -399,7 +399,8 @@ td:nth-child(3) {
     <tr><td>04:15 PM – 04:45 PM</td><td>Sarah Payne (Stony Brook)</td><td><i></i></td></tr>
     <tr style="border-bottom: 1px solid #ccc;"><td>04:45 PM – 05:00 PM</td><td colspan="2" style="text-align:center;"><b><i>break</i></b></td></tr>
     <tr><td>05:00 PM – 06:00 PM</td><td>Kyle Gorman (CUNY)</td><td><i>Abstractness and What it Gets You</i></td></tr>
-    <tr style="border-bottom: 1px solid #ccc;"><td>06:30 PM</td><td colspan="2" style="text-align:center;"><b><i>dinner</i></b></td></tr>
+    <tr style="border-bottom: 1px solid #ccc;"><td>06:30 PM</td><td colspan="2" style="text-align:center;"><b><i>dinner: <a
+href="https://www.oldmanraffertys.com">Old Man Rafferty's</a></i></b></td></tr>
   </table>
 </div>
 
