Update speaker title for Maria Elizabeth Garza

--- a/workshop2025/index.html
+++ b/workshop2025/index.html
@@ -378,7 +378,7 @@ td:nth-child(3) {
   <table>
     <tr style="color: #f7f7f7"><th colspan="2">morning</th><th colspan="1"><i>theme: linguistic analyses</i></th></tr>
     <tr><th style="border-bottom: 1px solid #ccc;">Time</th><th style="border-bottom: 1px solid #ccc;">Speaker</th><th style="border-bottom: 1px solid #ccc;">Title</th></tr>
-    <tr><td>09:00 AM – 09:20 AM</td><td>Maria Elizabeth Garza (Stony Brook)</td><td><i>Long Distance Metathesis in Spanish as Tier ISL (Tier Definite)</i></td></tr>
+    <tr><td>09:00 AM – 09:20 AM</td><td>Maria Elizabeth Garza (Stony Brook)</td><td><i>A Computational Analysis of [n]-Displacement in Spanish</i></td></tr>
     <tr><td>09:20 AM – 09:40 AM</td><td>Olanrewaju Samuel (Stony Brook)</td><td><i>Nasal and Tongue Root interaction in Yagba</i></td></tr>
     <tr style="border-bottom: 1px solid #ccc;"><td>09:40 AM – 09:50 AM</td><td colspan="2" style="text-align:center;"><b><i>break</i></b></td></tr>
     <tr><td>09:50 AM – 10:10 AM</td><td>Geonhee Lee (Stony Brook)</td><td><i>Logical Analysis of Nanti Stress Patterns</i></td></tr>
