Add group photo and additional image section

--- a/workshop2025/index.html
+++ b/workshop2025/index.html
@@ -267,7 +267,25 @@ Grant #2416184</a> <br><br><br><br></p></h4>
     lastModified.toLocaleString('en-US', options);
 </script>
 
+</div>
+<hr />
+<div id="group-photo" class="section level3">
+<h3>Group Photo</h3>
+       <div style="text-align: center;">
+         <a href="groupphotooriginal.jpg" target="_blank">
+           <img src="groupphoto.jpg" style="width:50%; display:block; margin:auto;">
+         </a>
+       </div>
+<hr />
+</div>
+       <div style="text-align: center;">
+  <a href="photo2.jpg" target="_blank">
+    <img src="photo1.jpg" alt="Description of the image" style="width:50%; display:block; margin:auto;">
+  </a>
+</div>
+
        
+
 </div>
 <hr />
 <div id="date-and-location" class="section level3">
