Update archived schedule

--- a/mathling/archive.html
+++ b/mathling/archive.html
@@ -36,6 +36,48 @@ a:hover {
 <a href="index.html">(back to main page)</a>
 
 <hr>
+<!------- Fall 2025 SCHEDULE  -------->	
+<h3>Fall 2025 Schedule</h3>
+	
+<p>
+    every other Tuesday, 11:30am-12:30pm, Rm 108 at 18 Seminary Pl
+</p>
+
+<ul>
+    <li>
+        <b>Sep 05</b> Organizational Meeting (joint with PhonX)
+    </li>
+	
+	<li>
+        <b>Sep 09</b> Introduction
+    </li>
+
+	<li>
+        <b>Sep 23</b> Hyunjung – connecting discrete and continuous representations
+    </li>
+
+	<li>
+        <b>Oct 07</b> Chenli – learning interacting processes
+    </li>
+
+	<li>
+        <b>Oct 21</b> Neha & Manish – UR learning implementation
+    </li>
+
+	<li>
+        <b>Nov 04</b> Vinny – linearisation, head movement and lowering
+    </li>
+
+	<li>
+		<b>Nov 14-16</b> subregular workshop
+	</li>
+
+	<li>
+		<b>Dec 02</b> Catherine & Merlin - topics on computational syntax 
+	</li>
+</ul>
+	
+<hr>
 <!------- Spring 2025 SCHEDULE  -------->	
 <h3>Spring 2025 Schedule</h3>
 
@@ -618,4 +660,5 @@ That's it for this semester! Tune in next semester, when we'll talk about <stron
     <!-- </p> -->
 </body>
 </html>
+
 
