--- a/mathling/index.html
+++ b/mathling/index.html
@@ -64,45 +64,21 @@ a:hover {
 
 <hr>
 
-<!------- Fall 2025 SCHEDULE  -------->	
-<h3>Fall 2025 Schedule</h3>
+<!------- Spring 2026 SCHEDULE  -------->	
+<h3>Spring 2026 Schedule</h3>
 	
 <p>
-    every other Tuesday, 11:30am-12:30pm, Rm 108 at 18 Seminary Pl
+    every other Wednesday, 11:00am-12:00pm, Rm 108 at 18 Seminary Pl
 </p>
 
 <ul>
     <li>
-        <b>Sep 05</b> Organizational Meeting (joint with PhonX)
+        <b>Jan 21</b> Organizational Meeting (joint with PhonX)
     </li>
 	
 	<li>
-        <b>Sep 09</b> Introduction
+        <b>Feb 04</b> Vinny - TBA
     </li>
-
-	<li>
-        <b>Sep 23</b> Hyunjung – connecting discrete and continuous representations
-    </li>
-
-	<li>
-        <b>Oct 07</b> Chenli – learning interacting processes
-    </li>
-
-	<li>
-        <b>Oct 21</b> Neha & Manish – UR learning implementation
-    </li>
-
-	<li>
-        <b>Nov 04</b> Vinny – linearisation, head movement and lowering
-    </li>
-
-	<li>
-		<b>Nov 14-16</b> subregular workshop
-	</li>
-
-	<li>
-		<b>Dec 02</b> Catherine & Merlin - topics on computational syntax 
-	</li>
 </ul>
 
 <hr>
@@ -113,6 +89,7 @@ a:hover {
 
 </body>
 </html>
+
 
 
 
