Add Eli Franz to student organizers
Updated student organizers list to include Eli Franz.

--- a/mathling/index.html
+++ b/mathling/index.html
@@ -44,8 +44,8 @@ a:hover {
         <td><b>Student organizers:</b></td>
         <td>
 	          Chenli Wang<br>
-		  Vincent Czarnecki<br>
 	          Merlin Balkhash<br>
+			  Eli Franz<br>
 	      </p>
         </td>
     </tr>
@@ -89,6 +89,7 @@ a:hover {
 
 </body>
 </html>
+
 
 
 
