Modify Spring 2026 schedule and meeting details
Updated the Spring 2026 schedule with a new meeting topic.

--- a/mathling/index.html
+++ b/mathling/index.html
@@ -77,7 +77,7 @@ a:hover {
     </li>
 	
 	<li>
-        <b>Feb 04</b> Vinny - TBA
+        <b>Feb 04</b> Vinny - The Strict Locality of Mismatching Domains: Revisiting H Tone Spreading in Xitsonga
     </li>
 </ul>
 
@@ -89,6 +89,7 @@ a:hover {
 
 </body>
 </html>
+
 
 
 
