Revise Spring 2026 schedule and venue details
Updated the Spring 2026 schedule with new meeting details and venue information.

--- a/mathling/index.html
+++ b/mathling/index.html
@@ -68,18 +68,67 @@ a:hover {
 <h3>Spring 2026 Schedule</h3>
 	
 <p>
-    every other Wednesday, 11:00am-12:00pm, Rm 108 at 18 Seminary Pl
+    every other Wednesday, 11:00am-12:00pm (please find the venue arrangements below as well)
 </p>
 
-<ul>
-    <li>
-        <b>Jan 21</b> Organizational Meeting (joint with PhonX)
-    </li>
-	
-	<li>
-        <b>Feb 04</b> Vinny - The Strict Locality of Mismatching Domains: Revisiting H Tone Spreading in Xitsonga
-    </li>
-</ul>
+<table>
+<tbody>
+<tr style="text-align: center;">
+<td style="width: 10%;"><b>date</b></td>
+<td style="width: 25%;"><b>venue</b></td>
+<td style="width: 30%; text-align: left;"><b>discussion leader</b></td>
+<td style="width: 35%; text-align: left;"><b>topic</b></td>
+</tr>
+<tr>
+<td style="text-align: center;"><b>Jan 21</b></td>
+<td style="text-align: center;">108, Linguistics Building</td>
+<td style="text-align: left;"></td>
+<td>Organisational Meeting (joint with PhonX)</td>
+</tr>
+<tr>
+<td style="text-align: center;"><b>Feb 04</b></td>
+<td style="text-align: center;">108, Linguistics Building</td>
+<td style="text-align: left;">Vinny</td>
+<td>The Strict Locality of Mismatching Domains</td>
+</tr>
+<tr>
+<td style="text-align: center;"><b>Feb 18</b></td>
+<td style="text-align: center;">ABW-5050</td>
+<td style="text-align: left;">Adam</td>
+<td>Interpretations Tutorial</td>
+</tr>
+<tr>
+<td style="text-align: center;"><b>Mar 04</b></td>
+<td style="text-align: center;">ABW-5050</td>
+<td style="text-align: left;">Adam / Neha, Manish&amp; Ezra</td>
+<td>TBA</td>
+</tr>
+<tr>
+<td style="text-align: center;"><b>Mar 18</b></td>
+<td style="text-align: center;"></td>
+<td style="text-align: left;"></td>
+<td>Spring Break</td>
+</tr>
+<tr>
+<td style="text-align: center;"><b>Apr 01</b></td>
+<td style="text-align: center;">ABW-5050</td>
+<td style="text-align: left;">Eli</td>
+<td>T-ISL Learning</td>
+</tr>
+<tr>
+<td style="text-align: center;"><b>Apr 15</b></td>
+<td style="text-align: center;">ABW-5050</td>
+<td style="text-align: left;">Catherine and Merlin</td>
+<td>Computational Syntax Session</td>
+</tr>
+<tr>
+<td style="text-align: center;"><b>Apr 29</b></td>
+<td style="text-align: center;">ABW-6190</td>
+<td style="text-align: left;">TBA</td>
+<td></td>
+</tr>
+</tbody>
+</table>
 
 <hr>
 
@@ -89,6 +138,7 @@ a:hover {
 
 </body>
 </html>
+
 
 
 
