--- a/mathling/index.html
+++ b/mathling/index.html
@@ -95,13 +95,13 @@ a:hover {
 <td style="text-align: center;"><b>Feb 18</b></td>
 <td style="text-align: center;">ABW-5050</td>
 <td style="text-align: left;">Adam</td>
-<td>Interpretations Tutorial</td>
+<td>Interpretations Tutorial I</td>
 </tr>
 <tr>
 <td style="text-align: center;"><b>Mar 04</b></td>
 <td style="text-align: center;">ABW-5050</td>
-<td style="text-align: left;">Adam / Neha, Manish&amp; Ezra</td>
-<td>TBA</td>
+<td style="text-align: left;">Adam</td>
+<td>Interpretations Tutorial II</td>
 </tr>
 <tr>
 <td style="text-align: center;"><b>Mar 18</b></td>
@@ -118,14 +118,14 @@ a:hover {
 <tr>
 <td style="text-align: center;"><b>Apr 15</b></td>
 <td style="text-align: center;">ABW-5050</td>
-<td style="text-align: left;">Catherine and Merlin</td>
-<td>Computational Syntax Session</td>
+<td style="text-align: left;">Neha, Manish&amp; Ezra</td>
+<td>TBA</td>
 </tr>
 <tr>
 <td style="text-align: center;"><b>Apr 29</b></td>
 <td style="text-align: center;">ABW-6190</td>
-<td style="text-align: left;">TBA</td>
-<td></td>
+<td style="text-align: left;">Catherine and Merlin</td>
+<td>Computational Syntax Session</td>
 </tr>
 </tbody>
 </table>
@@ -138,6 +138,7 @@ a:hover {
 
 </body>
 </html>
+
 
 
 
